nodejs-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: elk
spec:
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
